@@ -1108,12 +1108,10 @@ static int aggregateIsAutoVar = 0;
 /* createIvalStruct - generates initial value for structures       */
 /*-----------------------------------------------------------------*/
 static ast *
-createIvalStruct (ast * sym, sym_link * type, initList * ilist, ast * rootValue)
+createIvalStruct (ast *sym, sym_link *type, initList *ilist, ast *rootValue)
 {
   ast *rast = NULL;
   ast *lAst;
-  symbol *sflds, *old_sflds, *ps;
-  initList *iloop;
   sym_link *etype = getSpec (type);
 
   if (ilist && ilist->type != INIT_DEEP)
@@ -1122,62 +1120,68 @@ createIvalStruct (ast * sym, sym_link * type, initList * ilist, ast * rootValue)
       return NULL;
     }
 
-  iloop = ilist ? ilist->init.deep : NULL;
+  initList *iloop = ilist ? ilist->init.deep : NULL;
 
-  for (sflds = SPEC_STRUCT (type)->fields; ; sflds = sflds->next)
+  set *initialized_fields = newSet ();
+
+  // Handle designated initializers first.
+  for (;iloop && iloop->designation; iloop = iloop->next)
     {
+      symbol *sflds;
+
+      if (iloop->designation->type != DESIGNATOR_STRUCT)
+        {
+          werrorfl (iloop->filename, iloop->lineno, E_BAD_DESIGNATOR);
+          break;
+        }
+      else // Find this designated element
+        {
+          sflds = findStructField(SPEC_STRUCT (type)->fields, iloop->designation->designator.tag);
+          if (sflds)
+            {
+              if (iloop->designation->next)
+                {
+                  iloop = moveNestedInit(iloop);
+                }
+            }
+          else
+            {
+              werrorfl (iloop->filename, iloop->lineno, E_NOT_MEMBER,
+                        iloop->designation->designator.tag->name);
+              break;
+            }
+        }
+      
+      sflds->implicit = 1;
+      lAst = newNode (PTR_OP, newNode ('&', sym, NULL), newAst_VALUE (symbolVal (sflds)));
+      lAst = decorateType (resolveSymbols (lAst), RESULT_TYPE_NONE, true);
+      rast = decorateType (resolveSymbols (createIval (lAst, sflds->type, iloop, rast, rootValue, 1)), RESULT_TYPE_NONE, true);
+      addSet (&initialized_fields, sflds);
+
+      if (SPEC_STRUCT (type)->type == UNION)
+        goto release;
+    }
+
+  // Handle the rest and fill in the gaps.
+  for (symbol *sflds = SPEC_STRUCT (type)->fields; sflds; sflds = sflds->next)
+    {
+      if (isinSet (initialized_fields, sflds)) // Already initalized by designated initializer
+        continue;
+
       /* skip past unnamed bitfields */
       if (sflds && IS_BITFIELD (sflds->type) && SPEC_BUNNAMED (sflds->etype))
         continue;
 
-      old_sflds = sflds;
-      /* designated initializer? */
-      if (iloop && iloop->designation)
-        {
-          if (iloop->designation->type != DESIGNATOR_STRUCT)
-            {
-              werrorfl (iloop->filename, iloop->lineno, E_BAD_DESIGNATOR);
-            }
-          else /* find this designated element */
-            {
-              sflds = findStructField(SPEC_STRUCT (type)->fields,
-                                      iloop->designation->designator.tag);
-              if (sflds)
-                {
-                  if (iloop->designation->next)
-                    {
-                      iloop = moveNestedInit(iloop);
-                    }
-                }
-              else
-                {
-                  werrorfl (iloop->filename, iloop->lineno, E_NOT_MEMBER,
-                            iloop->designation->designator.tag->name);
-                  sflds = SPEC_STRUCT (type)->fields; /* fixup */
-                }
-            }
-        }
-
       /* if we have come to end */
-      if (!sflds)
-        break;
       if (!iloop && (!AST_SYMBOL (rootValue)->islocal || SPEC_STAT (etype)))
         break;
-
-      if (aggregateIsAutoVar && (SPEC_STRUCT (type)->type != UNION))
-        for (ps = old_sflds; ps != sflds && ps != NULL; ps = ps->next)
-          {
-            ps->implicit = 1;
-            lAst = newNode (PTR_OP, newNode ('&', sym, NULL), newAst_VALUE (symbolVal (ps)));
-            lAst = decorateType (resolveSymbols (lAst), RESULT_TYPE_NONE, true);
-            rast = decorateType (resolveSymbols (createIval (lAst, ps->type, NULL, rast, rootValue, 1)), RESULT_TYPE_NONE, true);          
-          }
 
       /* initialize this field */
       sflds->implicit = 1;
       lAst = newNode (PTR_OP, newNode ('&', sym, NULL), newAst_VALUE (symbolVal (sflds)));
       lAst = decorateType (resolveSymbols (lAst), RESULT_TYPE_NONE, true);
       rast = decorateType (resolveSymbols (createIval (lAst, sflds->type, iloop, rast, rootValue, 1)), RESULT_TYPE_NONE, true);
+      addSet (&initialized_fields, sflds);
       iloop = iloop ? iloop->next : NULL;
 
       /* Unions can only initialize a single field */
@@ -1193,6 +1197,9 @@ createIvalStruct (ast * sym, sym_link * type, initList * ilist, ast * rootValue)
       else
         werrorfl (sym->filename, sym->lineno, E_INIT_COUNT);
     }
+
+release:
+  deleteSet (&initialized_fields);
 
   return rast;
 }
